--- a/Game_SDL2.0.vcxproj.filters
+++ b/Game_SDL2.0.vcxproj.filters
@@ -42,7 +42,7 @@
     <ClCompile Include="Geometric.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="TextObject.cpp">
+    <ClCompile Include="MENU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -71,7 +71,7 @@
     <ClInclude Include="Geometric.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="TextObject.h">
+    <ClInclude Include="MENU.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
