--- a/Game_SDL2.0.vcxproj
+++ b/Game_SDL2.0.vcxproj
@@ -88,7 +88,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainOject.cpp" />
     <ClCompile Include="Main_P2_Object.cpp" />
-    <ClCompile Include="TextObject.cpp" />
+    <ClCompile Include="MENU.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseObject.h" />
@@ -99,7 +99,7 @@
     <ClInclude Include="ImpTimer.h" />
     <ClInclude Include="MainObject.h" />
     <ClInclude Include="Main_P2_Object.h" />
-    <ClInclude Include="TextObject.h" />
+    <ClInclude Include="MENU.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
