--- a/Game_SDL2.0.vcxproj.filters
+++ b/Game_SDL2.0.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="MENU.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ThreatObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common_Function.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MENU.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreatObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
